--- a/index.html
+++ b/index.html
@@ -1,18 +1,32 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link href="color.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
-    <title>Derpy</title>
+    <title>TheNightRunnners</title>
   </head>
   <body>
-    <body style="background-color:#ff0000;"body>
-    <center>
-      <body background="images/nissan240sxred.jpg"></body>
-    <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="https://www.youtube.com">youtube</a>
+    <left>
+      <ul>
+  <li><a class="index.html" href="#home">Home</a></li>
+  <li><a href="portfolio.html">Cars</a></li>
+  <li><a href="https://www.youtube.com/watch?v=e78zP0iePg8">Youtube Stancewars</a></li>
+  <li><a href="show.html">About Me</a></li>
+      </ul>
+      </left>
     <h1>This is my Home Page!</h1>
-    <img src="images/swedenssupre.jpg" height="250">
+    <table>
+      <tr><th>Period</th><th>Classes</th><th>Grade</th></tr>
+      <tr><td>1</td><td>Spanish 2A/UC</td><td>A+</td></tr>
+      <tr><td>2</td><td>Computer Science Principles</td><td>A+</td></tr>
+      <tr><td>3</td><td>Intergrated Math III A</td><td>A+</td></tr>
+      <tr><td>4</td><td>Film Animation A/UC</td><td>A+</td></tr>
+      <tr><td>5</td><td>Physics A/UC</td><td>A+</td></tr>
+      <tr><td>6</td><td>Spanish 3A/UC</td><td>A+</td></tr>
+      <tr><td>7</td><td>English 11A/UC</td><td>A+</td></tr>
+      <tr><td>8</td><td>Soccer B VAR</td><td>A+</td></tr>
+      <center>
+    <img src="images/nissan240sxred.jpg" height="250">
     </center>
   </body>
 </html> 
