--- a/portfolio.html
+++ b/portfolio.html
@@ -1,17 +1,24 @@
 <!doctype html>
 	<html lang="en">
 	  <head>
+	      <link href="color.css" rel="stylesheet" type="text/css">
 	    <meta charset="utf-8">
-	    <title>Portfolio</title>
+	    <title>TheNightRunners</title>
 	  </head>
 	  <body>
-    <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
-    <h1>This is my Portfolio Page!</h1>
-    <img src="images/portfolio.jpg" height="250">
+    <left>
+	    <ul>
+     <li><a href="index.html">Home</a></li>
+     <li><a href="portfolio.html">Cars</a></li>
+        </ul>
+    </left>
+        <center>
+    <h1>This is my Portfolio Page of Cars!</h1>
+    <img src="images/customred.jpg" height="260">
     <br>
-    <a target="_blank" href="https://scratch.mit.edu">
-      <img src="images/scratchlogo.png" height="100">
+    <a target="_blank" href="https://youtu.be/PO5Dp-wJKfA">
+      <img src="images/nissancustom.jpg" height="250">
+       </center>
     </a>
 	  </body>
 	</html>
