--- a/show.html
+++ b/show.html
@@ -1,18 +1,33 @@
 <!doctype html>
 	<html lang="en">
 	  <head>
+	      <link href="color.css" rel="stylesheet" type="text/css">
 	    <meta charset="utf-8">
-	    <title>home</title>
+	    <title>TheNightRuners</title>
 	  </head>
 	  <body>
-    <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a> 
-    <a href="show.html">show</a> 
-    <h1>This is my show Page!</h1>
-    <img src="images/portfolio.jpg" height="250">
+	    <left>
+	        <ul>
+         <li><a href="index.html">Home</a></li>
+         <li><a href="portfolio.html">Cars</a></li> 
+         <li><a href="show.html">About Me</a></li>
+            </ul>
+        </left>
+        <center>
+    <h1>This is my All About Me Page!</h1>
+    <details>
+       <summary>About Me</summary>
+       <p> - Matthew Rivas.</p>
+       <p>What I like to do is play soccer and I like to play videos when im bored and have nothing else to do.
+       And two more thing about me is I like to watch anime and I like cars.</p>
+     </details>
+
+    <p><b>Welcom</b> People</p>
+    <img src="images/Gohan.jpg" height="250">
     <br>
-    <a target="_blank" href="https://scratch.mit.edu">
-      <img src="images/scratchlogo.png" height="100">
+    <a target="_blank" href="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwi7vdmx7LXdAhUrilQKHQYUDskQjRx6BAgBEAU&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F280489883012732786%2F&psig=AOvVaw3QGZHbK-9lk5_5SJVuzx7K&ust=1536854793117765">
+      <img src="images/customred.jpg" height="250">
     </a>
+    </center>
 	  </body>
 	</html>
