--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <li><a href="portfolio.html">Cars</a></li>
   <li><a href="https://www.youtube.com/watch?v=e78zP0iePg8">Youtube Stancewars</a></li>
   <li><a href="show.html">About Me</a></li>
+  <li><a href="https://www.w3schools.com/">W3schools</a></li>
       </ul>
       </left>
     <h1>This is my Home Page!</h1>
