--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <ul>
   <li><a class="index.html" href="#home">Home</a></li>
   <li><a href="portfolio.html">Cars</a></li>
-  <li><a href="https://www.youtube.com/watch?v=e78zP0iePg8">Youtube Stancewars</a></li>
+  <li><a href="https://www.youtube.com/watch?v=e78zP0iePg8">Stance wars Vegas</a></li>
   <li><a href="show.html">About Me</a></li>
   <li><a href="https://www.w3schools.com/">W3schools</a></li>
       </ul>
@@ -27,7 +27,7 @@
       <tr><td>7</td><td>English 11A/UC</td><td>A+</td></tr>
       <tr><td>8</td><td>Soccer B VAR</td><td>A+</td></tr>
       <center>
-    <img src="images/nissan240sxred.jpg" height="250">
+    <img src="images/Oscar.jpg" height="250">
     </center>
   </body>
 </html> 
