--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,9 @@
     </left>
         <center>
     <h1>This is my Portfolio Page of Cars!</h1>
-    <img src="images/customred.jpg" height="260">
+    <img src="images/Melvin.jpg" height="260">
     <br>
+    <img src="images/Crew.jpg" height="250">
     <a target="_blank" href="https://youtu.be/PO5Dp-wJKfA">
       <img src="images/nissancustom.jpg" height="250">
        </center>
