--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <li><a href="https://www.w3schools.com/">W3schools</a></li>
       </ul>
       </left>
-    <h1>This is my Home Page!</h1>
+    <h1>This is my Home Page</h1>
     <table>
       <tr><th>Period</th><th>Classes</th><th>Grade</th></tr>
       <tr><td>1</td><td>Spanish 2A/UC</td><td>A+</td></tr>
