--- a/show.html
+++ b/show.html
@@ -10,11 +10,12 @@
 	        <ul>
          <li><a href="index.html">Home</a></li>
          <li><a href="portfolio.html">Cars</a></li> 
-         <li><a href="show.html">About Me</a></li>
+         <li><a href="https://www.youtube.com/watch?v=e78zP0iePg8">Stance wars Vegas</a></li>
+         <li><a href="https://www.w3schools.com/">W3schools</a></li>
             </ul>
         </left>
         <center>
-    <h1>This is my All About Me Page!</h1>
+    <h1>This is my All About Me Page</h1>
     <details>
        <summary>About Me</summary>
        <p> - Matthew Rivas.</p>
