--- a/portfolio.html
+++ b/portfolio.html
@@ -9,17 +9,78 @@
     <left>
 	    <ul>
      <li><a href="index.html">Home</a></li>
-     <li><a href="portfolio.html">Cars</a></li>
+     <li><a href="https://www.youtube.com/watch?v=e78zP0iePg8">Stance wars Vegas</a></li>
+     <li><a href="show.html">About Me</a></li>
+     <li><a href="https://www.w3schools.com/">W3schools</a></li>
         </ul>
     </left>
         <center>
-    <h1>This is my Portfolio Page of Cars!</h1>
-    <img src="images/Melvin.jpg" height="260">
-    <br>
-    <img src="images/Crew.jpg" height="250">
-    <a target="_blank" href="https://youtu.be/PO5Dp-wJKfA">
+    <h1>This is my Portfolio Page of Cars</h1>
+        </center>
+    <div class="slideshow-container">
+
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="images/Melvin.jpg" style="width:100%">
+    <div class="text">To Cool</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="images/Crew.jpg" style="width:100%">
+    <div class="text">TNR</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="images/customred.jpg" style="width:100%">
+    <div class="text">red</div>
+  </div>
+
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+   <br>
+
+  <div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span> 
+    <span class="dot" onclick="currentSlide(2)"></span> 
+   <span class="dot" onclick="currentSlide(3)"></span> 
+  </div>
+       <center>
+     <a target="_blank" href="https://youtu.be/PO5Dp-wJKfA">
       <img src="images/nissancustom.jpg" height="250">
        </center>
     </a>
-	  </body>
+    <script>
+        var slideIndex = 1;
+showSlides(slideIndex);
+
+// Next/previous controls
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+// Thumbnail image controls
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1} 
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none"; 
+  }
+  for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block"; 
+  dots[slideIndex-1].className += " active";
+}
+    </script>
+	</body>
 	</html>
